--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,10 @@
 {
   "manifest_version": 3,
   "name": "ChatGPT Organizer",
-  "version": "0.0.3",
-  "description": "Organize ChatGPT conversations (list, select, and later delete by date range).",
+  "version": "0.0.4",
+  "description": "Client-side tool to organize and delete your own ChatGPT conversations.",
+  "author": "Nathabee",
+  "homepage_url": "https://nathabee.github.io/chatgpt-organizer/",
   "icons": {
     "16": "assets/icon-16.png",
     "32": "assets/icon-32.png",
