--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "chatgpt-organizer",
   "private": true,
-  "version": "0.0.5",
+  "version": "0.0.6",
   "type": "module",
   "scripts": {
-    "build": "node scripts/build.mjs",
+		"clean": "rm -rf ./build ./dist",
+    "build": "npm run clean && node scripts/build.mjs",
     "watch": "node scripts/build.mjs --watch",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
