--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # -------------------------------------------------
 dist/
 
-
+release/
 # -------------------------------------------------
 # dependencies
 # -------------------------------------------------
