--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ dist/
 
 release/
 # -------------------------------------------------
+# docs for github page
+# -------------------------------------------------
+!docs/cgo-demo/
+!docs/cgo-demo/** 
+
+# -------------------------------------------------
 # dependencies
 # -------------------------------------------------
 node_modules/
