--- a/demo/package.json
+++ b/demo/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build",
+    "build": "tsc -p tsconfig.json --noEmit && tsc -p tsconfig.node.json --noEmit && vite build",
     "preview": "vite preview --host"
   },
   "devDependencies": {
+    "@types/node": "^25.0.7",
     "typescript": "^5.6.3",
     "vite": "^5.4.10"
   }
