--- a/demo/tsconfig.node.json
+++ b/demo/tsconfig.node.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["ES2022", "DOM"],
-    "useDefineForClassFields": true,
+    "lib": ["ES2022"],
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "strict": true,
     "skipLibCheck": true,
-    "types": [],
-    "baseUrl": "."
+    "types": ["node"],
+    "noEmit": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts"]
+  "include": ["vite.config.ts"]
 }
