--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chatgpt-organizer",
   "private": true,
-  "version": "0.1.17",
-  "type": "module", 
+  "version": "0.1.18",
+  "type": "module",
   "scripts": {
     "clean": "rm -rf ./build ./dist",
     "typecheck": "tsc -p tsconfig.json --noEmit",
@@ -15,5 +15,8 @@
     "esbuild": "^0.25.0",
     "typescript": "^5.6.3"
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx"
+  ]
 }
